<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="bota_validar">Validar</string>
    <string name="texto_validao">Validação</string>
    <string name="texto_explicacao">Você recebeu um SMS para validação do seu número, digite o código de validação abaixo:</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="nao_tem_conta">Não tem uma conta? Cadastre-se</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="item_sair">Sair</string>
    <string name="item_configuracoes">Configurações</string>
    <string name="item_pesquisar">Pesquisar</string>
    <string name="item_adicionar">Adicionar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_conversa">ConversaActivity</string>
</resources>
