<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="whatsappclone.ericserafim.com.whatsappclone.activity.CadastroUsuarioActivity"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="113dp"
        app:srcCompat="@drawable/usuario"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_cadastro_nome"
        android:hint="@string/digite_nome"
        android:textColor="@android:color/white"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edit_cadastro_email"
        android:hint="@string/digite_email"
        android:textColor="@android:color/white"
        android:layout_below="@+id/edit_cadastro_nome"
        android:layout_alignParentStart="true"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edit_cadastro_senha"
        android:hint="@string/digite_senha"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        android:layout_below="@+id/edit_cadastro_email"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/botao_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/bt_cadastrar"
        android:layout_below="@+id/edit_cadastro_senha"
        android:layout_alignParentStart="true"
        android:theme="@style/botaoPadrao"/>
</RelativeLayout>
